--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "test": "jest --verbose",
-    "test-watch": "jest --watchAll --verbose"
+    "test-watch": "jest --watchAll --verbose",
+    "lint": "eslint **/*.js"
   },
   "jest": {
     "testEnvironment": "node"
@@ -25,5 +26,8 @@
     "morgan": "^1.9.1",
     "supertest": "^3.3.0",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0"
   }
 }
