--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "test": "jest --verbose",
     "test-watch": "jest --watchAll --verbose",
-    "lint": "eslint **/*.js"
+    "lint": "eslint '**/*.js'"
   },
   "jest": {
     "testEnvironment": "node"
